# wam-teleop-nowrist

./: CMakeLists.txt  README.md
config/follower-slax/: follower.conf  wam7w.conf
config/follower-slax/calibration_data/wam4/: gravitycal.conf
config/follower-slax/calibration_data/wam7w/: gravitycal.conf  gravitycal.conf.1  zerocal.conf  zerocal.conf.1
config/follower/calibration_data/wam4/: gravitycal.conf
config/leader-link/calibration_data/wam4/: gravitycal.conf
config/leader-wrist/calibration_data/wam4/: gravitycal.conf
config/leader/calibration_data/wam4/: gravitycal.conf.backup
data/2cdyncomp_ext_1/: dynamics.txt  kinematics.txt
data/default_0/: dynamics.txt  kinematics.txt
data/default_1/: dynamics.txt  kinematics.txt
data/default_2/: dynamics.txt  kinematics.txt
data/default_4/: dynamics.txt  kinematics.txt
data/default_5/: dynamics.txt  kinematics.txt
data/default_contact_1/: config.txt  dynamics.txt  kinematics.txt
data/default_contact_2/: config.txt  dynamics.txt  kinematics.txt
data/default_contact_4/: dynamics.txt  kinematics.txt
data/default_ext_1/: dynamics.txt  kinematics.txt
data/default_ext_2/: dynamics.txt  kinematics.txt
data/default_ext_3/: config.txt  dynamics.txt  kinematics.txt
data/default_ext_4/: dynamics.txt  kinematics.txt
data/ideal_0/: dynamics.txt  kinematics.txt
data/ideal_1/: dynamics.txt  kinematics.txt
data/ideal_2/: dynamics.txt  kinematics.txt
data/ideal_3/: dynamics.txt  kinematics.txt
data/ideal_4/: dynamics.txt  kinematics.txt
data/ideal_5/: dynamics.txt  kinematics.txt
data/ideal_contact_1/: dynamics.txt  kinematics.txt
data/ideal_contact_2/: dynamics.txt  kinematics.txt
data/ideal_contact_4/: dynamics.txt  kinematics.txt
data/ideal_ext_1/: dynamics.txt  kinematics.txt
data/ideal_ext_2/: dynamics.txt  kinematics.txt
data/ideal_ext_3/: dynamics.txt  kinematics.txt
data/ideal_ext_4/: dynamics.txt  kinematics.txt
scripts/: setup_follower.sh  setup_follower_slax.sh  setup_leader.sh
src/: background_state_publisher.h  dynamic_external_torque.h  external_torque.h  follower.cpp  follower.h  follower_beta.h  follower_beta_slax.h  follower_dynamics.h  follower_ext.cpp  leader.cpp  leader.h  leader_beta.h  leader_dynamics.h  leader_nowrist.cpp  leader_nowrist.h  leader_nowrist_data.cpp  leader_nowrist_data.h  leader_nowrist_data_ext.cpp  one_step_delay.h  plot.py  plot_ext.py  regressor_W.h  tool_frame_cb.h  udp_handler.cpp  udp_handler.h
